hphp/hack/test/typecheck/stricter_consts/conflict_via.bad.php.exp
File "conflict_via.bad.php", line 16, characters 7-7:
Constant X is defined concretely in multiple ancestors (Typing[4374])
  File "conflict_via.bad.php", line 5, characters 13-13:
  One conflicting definition is here, inherited through T1
  File "conflict_via.bad.php", line 9, characters 13-13:
  Another conflicting definition is here, inherited through T2
  File "conflict_via.bad.php", line 13, characters 13-13:
  Another conflicting definition is here, inherited through T3
File "conflict_via.bad.php", line 17, characters 7-8:
Some members in class `C` are incompatible with those declared in type `T1` (Typing[4374])
  File "conflict_via.bad.php", line 13, characters 13-13:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "conflict_via.bad.php", line 5, characters 13-13:
  `X` inherited from `I1`
  File "conflict_via.bad.php", line 13, characters 13-13:
  conflicts with constant `X` inherited from `I3`.
File "conflict_via.bad.php", line 17, characters 11-12:
Some members in class `C` are incompatible with those declared in type `T2` (Typing[4374])
  File "conflict_via.bad.php", line 13, characters 13-13:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "conflict_via.bad.php", line 9, characters 13-13:
  `X` inherited from `I2`
  File "conflict_via.bad.php", line 13, characters 13-13:
  conflicts with constant `X` inherited from `I3`.
